...
              />
            </>
          ) : null}
        </View>
        <View className="ml-auto mr-4 mt-1">
          {isSubscribed ? (
            <Pressable hitSlop={10} onPress={openFollow} testID="discover-feed-follow-action">
              <View className="px-5 py-2">
                <Text className="text-sm font-bold text-tertiary-label">
                  {t("feed.actions.followed")}
                </Text>
              </View>
            </Pressable>
...
