...
          headerRight={() => (
            <HeaderSubmitTextButton
              isValid={isValid}
              onPress={form.handleSubmit(submit)}
              isLoading={isLoading}
              label={isSubscribed ? tCommon("words.save") : tCommon("words.follow")}
              testID="follow-submit"
            />
          )}
        />
      }
    >
      {/* Group 1 */}
...
