...
  "login.password_optional": "Optional",
  "login.privacy": "Privacy Policy",
  "login.send_magic_link": "Send Magic Link",
  "login.signUp": "Sign up with email",
  "login.submit": "Submit",
  "login.terms": "Terms of Service",
  "login.title": "Welcome to Folo",
  "login.with_email.title": "Login with Email",
  "mark_all_read_button.auto_confirm_info": "Will be confirmed automatically after {{countdown}}s.",
  "mark_all_read_button.confirm": "Confirm",
  "mark_all_read_button.confirm_mark_all": "Mark <which /> as read?",
  "mark_all_read_button.confirm_mark_all_info": "Confirm mark all as read?",
  "mark_all_read_button.done": "Marked",
...
