...
      <View style={readableItemStyle}>
        <EntryNormalItem
          entryId={id}
          extraData={extraData as EntryExtraData}
          view={view}
          hasTopSeparator={index > 0}
          testID={index === 0 ? "timeline-entry-first" : undefined}
        />
      </View>
    ),
    [readableItemStyle, view],
  )

...
