...
    translationKey: "titles.general",
    icon: Settings1CuteFiIcon,
    onPress: ({ navigation }) => {
      navigation.pushControllerView(GeneralScreen)
    },
    iconBackgroundColor: "#F43F5E",
    testID: "settings-general-link",
  },
  {
    translationKey: "titles.notifications",
    icon: NotificationCuteReIcon,
    onPress: ({ navigation }) => {
      navigation.pushControllerView(NotificationsScreen)
...
          await signOut()
        },
      })
    },
    iconBackgroundColor: "#DC2626",
    anonymous: false,
    testID: "settings-sign-out",
  },
]

const NavigationLinkGroup: FC<{
  links: GroupNavigationLink[]
}> = ({ links }) => {
...
