...

  const showCloseIcon = canDismiss && isTopRouteInGroup

  if (!canGoBack && !canDismiss) return null
  return (
    <UINavigationHeaderActionButton
      testID="navigation-back"
      onPress={() => {
        const leave = () => {
          if (canGoBack) {
            navigation.back()
          } else if (canDismiss) {
            navigation.dismiss()
...
