appId: is.follow
---
- tapOn:
    id: tab-SettingsTabScreen
- extendedWaitUntil:
    visible:
      id: settings-general-link
    timeout: 15000
- scrollUntilVisible:
    element:
      id: settings-sign-out
    direction: DOWN
    timeout: 15000
    centerElement: false
- tapOn:
    id: settings-sign-out
- tapOn:
    text: Sign Out
- extendedWaitUntil:
    visible:
      id: login-provider-credential
    timeout: 30000
- assertVisible:
    id: login-provider-credential
